[package]
name = "portnord"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23"
futures = "0.3.17"
hyper = { version = "0.14.19", features = ["full"] }
kube = { version = "0.73.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.7.0"
tui = "0.18"